--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,5 @@ code {
     monospace;
 }
 html, body {
-  overflow-x: hidden;
   max-width: 100%;
 }
